---------------------------------------------------------------------------------------------------
Version: 1.9.4
Date: ???
  Features:
    - 'Logistics' search option now finds items inside loaders
  Changes:
    - Changed default keybind from 'Control + Shift + F' 'Shift + F' to avoid collision with vanilla prototype explorer
  Locale:
    - Added complete German translations (thanks knniDE on Crowdin!)
    - Added complete Brazilian Portuguese translations (thanks Henrique Pimenta on Crowdin!)
---------------------------------------------------------------------------------------------------
Version: 1.9.3
Date: 15 August 2022
  Bugfixes:
    - Fixed crash when viewing a result that is inside a Factorissimo2 building when the building has been mined or destroyed
---------------------------------------------------------------------------------------------------
Version: 1.9.2
Date: 5 August 2022
  Features:
    - Added yellow highlight to mark the most recently selected result button
  Bugfixes:
    - Fixed 'Ground' search option not working
---------------------------------------------------------------------------------------------------
Version: 1.9.1
Date: 20 July 2022
  Features:
    - Added integration with Factorissimo2 - notnotmelon fork so that viewing results will take you to the factory that contains the result location
  Bugfixes:
    - Fixed crash when another mod destroys the Factory Search interface
---------------------------------------------------------------------------------------------------
Version: 1.9.0
Date: 6 July 2022
  Features:
    - Added 'Ingredient' search option to search for machines that consume a particular item
    - 'Entity' search now finds resources (including Space Exploration's core seams)
---------------------------------------------------------------------------------------------------
Version: 1.8.0
Date: 20 June 2022
  Features: